# ChangeLog for app-office/krita
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/krita/Attic/ChangeLog,v 1.85 2009/02/08 17:27:18 carlo Exp $

*krita-1.6.3_p20090204 (08 Feb 2009)

  08 Feb 2009; Carsten Lohrke <carlo@gentoo.org>
  +krita-1.6.3_p20090204.ebuild:
  Sync to branch plus various fixes.

  21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/krita-1.6.3+gcc-4.3.patch, krita-1.6.3.ebuild:
  Fix building with GCC 4.3. Closes bug #214372. Patch coming from Fedora,
  thanks to Peter Alfredsen for reporting.

  12 Nov 2007; Wulf C. Krueger <philantrop@gentoo.org> metadata.xml,
  krita-1.6.3.ebuild:
  Added a minor fix for the desktop file as per bug 190006. Thanks to
  gentoofan23 for providing the patch!

  26 Jul 2007; Markus Rothe <corsair@gentoo.org> krita-1.6.3.ebuild:
  Stable on ppc64; bug #178697

  23 Jul 2007; nixnut <nixnut@gentoo.org> krita-1.6.3.ebuild:
  Stable on ppc wrt bug 178697

  23 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> krita-1.6.3.ebuild:
  Stable on sparc wrt #178697

  22 Jul 2007; Jeroen Roovers <jer@gentoo.org> krita-1.6.3.ebuild:
  Stable for HPPA (bug #178697).

  19 Jul 2007; Raúl Porcel <armin76@gentoo.org> krita-1.6.3.ebuild:
  alpha/ia64/x86 stable wrt #178697

  18 Jul 2007; Jeroen Roovers <jer@gentoo.org> krita-1.6.3.ebuild:
  Restoring ~hppa.

  18 Jul 2007; Marcus D. Hanwell <cryos@gentoo.org> -krita-1.5.2-r1.ebuild,
  -krita-1.6.2.ebuild:
  Cleaned out old versions.

  18 Jul 2007; Marcus D. Hanwell <cryos@gentoo.org> krita-1.6.3.ebuild:
  Marked stable on amd64, bug 178697.

*krita-1.6.3 (08 Jun 2007)

  08 Jun 2007; Carsten Lohrke <carlo@gentoo.org> +krita-1.6.3.ebuild:
  Version bump.

  02 Mar 2007; Jeroen Roovers <jer@gentoo.org> krita-1.6.1.ebuild:
  Stable for HPPA.

*krita-1.6.2 (16 Feb 2007)

  16 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> +krita-1.6.2.ebuild: