@@ -4,6 +4,6 @@ DIST koffice-1.6.3.tar.bz2 56829391 RMD160 e474ba48fa983fafb61ad58fb79cddda69ec6
 DIST koffice-1.6.3_p20090204.tar.bz2 105139802 RMD160 c9207791de8df4c32a19e1d6a336940cd7f3f9cd SHA1 94c15023abd58d7405876d3d62088dfd82f0b042 SHA256 0baa7537a705e068449f13b2b69aa75de8eb5a3664e52234a11af555f019f466
 EBUILD krita-1.6.1.ebuild 1694 RMD160 b6507829fb1d9a6865b001ed3f02ef4886700b08 SHA1 33fe889b427612c006fb3052796d2133cf59f796 SHA256 77d005e340e019cc97a09c1010af7f064bd6ae1bbd486f1a433ec4401877c710
 EBUILD krita-1.6.3.ebuild 1939 RMD160 c42b2fac2cc5ce37abe8a837a12138ffddf67b61 SHA1 c43aac3722de2f1b7838b6e93a6051cd37748cd7 SHA256 cb2f2ab0d2284cf7e8779d78f51c21720b157d465a61b1c01cf5c2d116127549
-EBUILD krita-1.6.3_p20090204.ebuild 1825 RMD160 5b82eb15ee520d4232c0a9fa14af732cee2eafec SHA1 8ef980aea6e36b79fd65c9545a4544e8eac0afd6 SHA256 ca50ca6b113a349a20338f25c5a22eb926b6cc1101a9b5fce9b8bcfbe5a879d0
-MISC ChangeLog 10090 RMD160 890544885f315ac4b75ae49013def0b9e040d65e SHA1 ca0621a234310b8e3ba5a8002751c0dc525bd345 SHA256 93ae99967c88a71025ce53516e64b89da3047bd23ddccea14e340857be1406df
+EBUILD krita-1.6.3_p20090204.ebuild 1576 RMD160 3e6ae86a40ce70be20086d90047b440abe074b15 SHA1 ca2c56f5cbcfbc20e290899e3dcab6cea63276fe SHA256 541679a3763b1662a1218dc99cd2eec707f94f28a3eb3428568d664293564ad5
+MISC ChangeLog 10207 RMD160 8f26a353193c1c2dbd107fed6a5becac118e07dc SHA1 b3d1cdaa4608335182a219dcfcaa806f44186970 SHA256 6da5c78f2ec9e6dbf97eb6e0c37a18e2b256295998e294d3e80750bf80535cad
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
