@@ -1,6 +1,8 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/krita/Attic/krita-1.6.3_p20090204.ebuild,v 1.1 2009/02/08 17:27:18 carlo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/krita/Attic/krita-1.6.3_p20090204.ebuild,v 1.2 2009/02/15 22:22:45 carlo Exp $
+
+EAPI="2"
 
 ARTS_REQUIRED="never"
 
@@ -13,8 +15,6 @@ LICENSE="GPL-2 LGPL-2"
 
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-# See bug #130442.
-#IUSE="opengl"
 IUSE=""
 
 DEPEND="~app-office/koffice-libs-1.6.3_p20090204
@@ -25,9 +25,9 @@ DEPEND="~app-office/koffice-libs-1.6.3_p20090204
 	media-libs/libpng
 	>=media-libs/libexif-0.6.13-r1
 	virtual/opengl
-	virtual/glu"
-
-#opengl? ( virtual/opengl virtual/glu )"
+	virtual/glu
+	x11-libs/qt:3[opengl]"
+RDEPEND="${DEPEND}"
 
 KMCOPYLIB="libkformula lib/kformula
 	libkofficecore lib/kofficecore
@@ -47,16 +47,6 @@ KMEXTRA="filters/krita"
 
 need-kde 3.5
 
-pkg_setup() {
-	# use opengl &&
-		if ! built_with_use =x11-libs/qt-3* opengl ; then
-			eerror "You need to build x11-libs/qt with opengl use flag enabled."
-			die
-		fi
-
-	kde_pkg_setup
-}
-
 src_unpack() {
 	kde-meta_src_unpack
 
@@ -69,8 +59,6 @@ src_unpack() {
 }
 
 src_compile() {
-#	local myconf="$(use_with opengl gl)"
-
 	for i in $(find "${S}"/lib -iname "*\.ui"); do
 		"${QTDIR}"/bin/uic ${i} > ${i%.ui}.h
 	done
